First iteration of larger rover code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD 20)
 # and flashing to an UNO R3 without Arduino IDE.
 include_directories(IEEE2026/Libraries/ArduinoCore-avr/cores/arduino)
 include_directories(IEEE2026/Libraries/Stepper/src)
-file(GLOB IEEE2026/juniorTeam/**)
+file(GLOB IEEE2026/movement/**)
 add_compile_definitions(__AVR_ATmega8__ HAVE_HWSERIAL0 UBRRH)
 
 add_executable(IEEE2025 main.cpp)
